key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/local-class/LocalCls.java
public class LocalCls {
    int f() {
        class Local { int g() { return 9; } }
        Local l = new Local();
        return l.g();
    }
}
